--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ people:
     position: Product Owner
     social:
     - title: linkedin
-        url: "https://www.linkedin.com/in/faustin-demesse-bb21a7155"
+        url: #
       - title: twitter
         url: #
       - title: facebook
