--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ people:
   pic: Kotartee
   position: Developer
   social:
-    - title: twitter
+    - title: linkedin
       url: https://www.linkedin.com/in/kotartee-torh/
     - title: facebook
       url: #
@@ -105,6 +105,8 @@ people:
   pic: jpurple
   position: Lead Developer
   social:
+    - title: linkedin
+      url: https://www.linkedin.com/in/ngnepedoh-irving-craig/
     - title: twitter
       url: #
     - title: facebook
@@ -115,15 +117,15 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: #
   - title: facebook
     url:
   - title: stack-overflow
     url: 
   - title: bitbucket 
-    url: http://bitbucket.org/jekyll
+    url: #
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/Agilewarriors
 
 # Postal address (add as many lines as necessary)
 address:
